--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,3 +1,4 @@
+/* plot and generate buttons */
 .content button {
     display: block;
     padding: 15px 25px;
@@ -18,11 +19,9 @@
 
 .content button:hover {
     background-color: rgb(0, 62, 177);
-    /* color: black; */
 }
 
-.content button:active:not(:disabled) {
-    /* background-color: violet; */
+.content .generators button:active:not(:disabled) {
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
@@ -32,6 +31,49 @@
     cursor: not-allowed;
 }
 
+/* plot button animation */
+#b1 {
+    overflow: hidden;
+    position: relative;
+    box-shadow: none;
+    border-radius: 5px;
+    box-shadow: 0 20px 35px rgba(0,0,0,0.3);
+}
+
+#b1::before {
+    content: "";
+    background-image: conic-gradient(
+        #04b0ee 20deg,
+        transparent 160deg
+    );
+    height: 300%;
+    width: 150%;
+    position: absolute;
+    left: -25%;
+    top: -100%;
+    animation: rotate 2s infinite linear; 
+}
+
+@keyframes rotate{
+    100%{
+        transform: rotate(-360deg);
+    }
+}
+#b1::after {
+    content: "Plot";
+    height: 88%;
+    width: 92%;
+    position: absolute;
+    background-color: #1c1b29;
+    border-radius: 5px;
+    top: 6%;
+    left: 4%;
+    color: #04b0ee;
+    display: grid;
+    place-items: center;
+}
+
+/* menu buttons */
 .graph_side menu {
     margin: 30px 0 0 0;
     padding: 0;
@@ -43,6 +85,10 @@
     list-style-type: none; 
     padding: 0; 
     margin: 0; 
+}
+
+#generate_tab_b {
+    border-right: 0;
 }
 
 .graph_side menu button {
@@ -63,8 +109,4 @@
 
 .graph_side menu button:hover {
     background-color: #9e9e9e !important;
-}
-
-#generate_tab_b {
-    border-right: 0;
 }
